--- a/page2.html
+++ b/page2.html
@@ -102,9 +102,10 @@
 
   <script>
     function next() {
-      window.location.href = "vday3.html";
+      window.location.href = "page3.html";
     }
   </script>
 
 </body>
 </html>
+
