--- a/page3.html
+++ b/page3.html
@@ -100,9 +100,10 @@
 
   <script>
     function next() {
-      window.location.href = "vday3.html";
+      window.location.href = "page3.html";
     }
   </script>
 
 </body>
 </html>
+
