--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <script>
   function goNext() {
-    window.location.href = "vday2.html";
+    window.location.href = "page2.html";
   }
 
   function moveNo() {
@@ -65,3 +65,4 @@
 </script>
 </body>
 </html>
+
